# corax-arcana

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: dag_bronze_ingestion.py  dag_gold_aggregate.py  dag_silver_transform.py
dbt/corax_arcana/: dbt_project.yml
dbt/corax_arcana/models/marts/: dim_card.sql  dim_ruling.sql
dbt/corax_arcana/models/marts/gold/: _gold.yml  agg_collection_value.sql  agg_format_meta.sql  agg_price_history_weekly.sql  fct_card_prices.sql
dbt/corax_arcana/models/marts/silver/: _silver.yml
dbt/corax_arcana/models/staging/: _staging.yml  stg_scryfall__cards.sql  stg_scryfall__rulings.sql
src/ingestion/: client.py  run.py  schemas.py  writer.py
tests/: test_ingestion.py  test_placeholder.py
